Style fixes for HP and button alignment on preview
- increased size of "trial" URL box and button
- adding padding between selling points section
- fixed cut off button text in "sign in to save page" area

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -104,3 +104,14 @@ ul#left_nav {
   padding: 5px;
 }
 
+.navbar-inner {
+  border-radius:0;
+  -webkit-border-radius:0;
+  -moz-border-radius:0;
+  height: 50px;
+}
+
+.container {
+  min-height:250px;
+}
+
